--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <script
     src="http://code.jquery.com/jquery-3.2.1.js"
     integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -14,10 +15,19 @@
 <body>
 
     
+<div class="dropButton">
+    <button class="drop" id="0-col">Drop</button>
+    <button class="drop" id="1-col">Drop</button>
+    <button class="drop" id="2-col">Drop</button>
+    <button class="drop" id="3-col">Drop</button>
+    <button class="drop" id="4-col">Drop</button>
+    <button class="drop" id="5-col">Drop</button>
+    <button class="drop" id="6-col">Drop</button>
+</div>
 
-   <button>Drop</button>
-        <table class="board">
-            <tr>
+<table class="board">
+    <tr class="row0">
+        
                 <td class="dots" id="0">X</td>
                 <td class="dots" id="1"></td>
                 <td class="dots" id="2"></td>
@@ -26,34 +36,34 @@
                 <td class="dots" id="5"></td>
                 <td class="dots" id="6"></td>
             </tr>
-            <tr>
-                <td class="dots" id="7">Y</td>
-                <td class="dots" id="8">U</td>
+            <tr class="row1">
+                <td class="dots" id="7"></td>
+                <td class="dots" id="8"></td>
                 <td class="dots" id="9"></td>
                 <td class="dots" id="10"></td>
                 <td class="dots" id="11"></td>
                 <td class="dots" id="12"></td>
                 <td class="dots" id="13"></td>
             </tr>
-            <tr>
-                <td class="dots" id="14">X</td>
-                <td class="dots" id="15">X</td>
-                <td class="dots" id="16">X</td>
-                <td class="dots" id="17">X</td>
-                <td class="dots" id="18">X</td>
-                <td class="dots" id="19">X</td>
-                <td class="dots" id="20">X</td>
+            <tr class="row2">
+                <td class="dots" id="14"></td>
+                <td class="dots" id="15"></td>
+                <td class="dots" id="16"></td>
+                <td class="dots" id="17"></td>
+                <td class="dots" id="18"></td>
+                <td class="dots" id="19"></td>
+                <td class="dots" id="20"></td>
             </tr>
-            <tr>
-                <td class="dots" id="21">X</td>
-                <td class="dots" id="22">X</td>
-                <td class="dots" id="23">X</td>
-                <td class="dots" id="24">X</td>
-                <td class="dots" id="25">X</td>
-                <td class="dots" id="26">X</td>
+            <tr class="row3">
+                <td class="dots" id="21"></td>
+                <td class="dots" id="22"></td>
+                <td class="dots" id="23"></td>
+                <td class="dots" id="24"></td>
+                <td class="dots" id="25"></td>
+                <td class="dots" id="26"></td>
                 <td class="dots" id="27"></td>
             </tr>
-            <tr>
+            <tr class="row4">
                 <td class="dots" id="28"></td>
                 <td class="dots" id="29"></td>
                 <td class="dots" id="30"></td>
@@ -62,7 +72,7 @@
                 <td class="dots" id="33"></td>
                 <td class="dots" id="34"></td>
             </tr>
-            <tr>
+            <tr class="row5">
                 <td class="dots" id="35"></td>
                 <td class="dots" id="36"></td>
                 <td class="dots" id="37"></td>
