--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 </head>
 <body>
 <h1>Connect Four</h1>
-    
-<div class="dropButton">
-    <button class="drop" id="0-col">Drop 1</button>
-    <button class="drop" id="1-col">Drop 2</button>
-    <button class="drop" id="2-col">Drop 3</button>
-    <button class="drop" id="3-col">Drop 4</button>
-    <button class="drop" id="4-col">Drop 5</button>
-    <button class="drop" id="5-col">Drop 6</button>
-    <button class="drop" id="6-col">Drop 7</button>
+    <h2 class="gameMessage"></h2>
+    <h3>This is Connect Four. This isn't rocket science. One click per player.</h3>
+<div>
+    <div class="dropButton">
+        <button class="drop" id="0-col">Drop 1</button>
+        <button class="drop" id="1-col">Drop 2</button>
+        <button class="drop" id="2-col">Drop 3</button>
+        <button class="drop" id="3-col">Drop 4</button>
+        <button class="drop" id="4-col">Drop 5</button>
+        <button class="drop" id="5-col">Drop 6</button>
+        <button class="drop" id="6-col">Drop 7</button>
+    </div>
 </div>
 <div class="boardOutline">
 <table class="board">
@@ -80,8 +83,9 @@
             </tr>
         </table>
     </div>
+    <div>
     <button class="reset">Reset</button>
-
+    </div>
 
 
   <script src="js/main.js"> </script>  
