--- a/index.html
+++ b/index.html
@@ -1,93 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>    
-    <title>Connect Four</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+  <title>Connect Four</title>
 </head>
+
 <body>
-<h1>Connect Four</h1>
-    <h2 class="gameMessage"></h2>
-    <h3>This is Connect Four. This isn't rocket science. One click per player.</h3>
-<div>
-    <div class="dropButton">
-        <button class="drop" id="0-col">Drop 1</button>
-        <button class="drop" id="1-col">Drop 2</button>
-        <button class="drop" id="2-col">Drop 3</button>
-        <button class="drop" id="3-col">Drop 4</button>
-        <button class="drop" id="4-col">Drop 5</button>
-        <button class="drop" id="5-col">Drop 6</button>
-        <button class="drop" id="6-col">Drop 7</button>
+  <h1>Connect Four</h1>
+  <h2 class="gameMessage"></h2>
+
+      <h3>This is Connect Four. This isn't rocket science. One click per player.</h3>
     </div>
-</div>
-<div class="boardOutline">
-<table class="board">
-    <tr class="row0">
-        
-                <td class="dots" id="5"></td>
-                <td class="dots" id="11"></td>
-                <td class="dots" id="17"></td>
-                <td class="dots" id="23"></td>
-                <td class="dots" id="29"></td>
-                <td class="dots" id="35"></td>
-                <td class="dots" id="41"></td>
-            </tr>
-            <tr class="row1">
-                <td class="dots" id="4"></td>
-                <td class="dots" id="10"></td>
-                <td class="dots" id="16"></td>
-                <td class="dots" id="22"></td>
-                <td class="dots" id="28"></td>
-                <td class="dots" id="34"></td>
-                <td class="dots" id="40"></td>
-            </tr>
-            <tr class="row2">
-                <td class="dots" id="3"></td>
-                <td class="dots" id="9"></td>
-                <td class="dots" id="15"></td>
-                <td class="dots" id="21"></td>
-                <td class="dots" id="27"></td>
-                <td class="dots" id="33"></td>
-                <td class="dots" id="39"></td>
-            </tr>
-            <tr class="row3">
-                <td class="dots" id="2"></td>
-                <td class="dots" id="8"></td>
-                <td class="dots" id="14"></td>
-                <td class="dots" id="20"></td>
-                <td class="dots" id="26"></td>
-                <td class="dots" id="32"></td>
-                <td class="dots" id="38"></td>
-            </tr>
-            <tr class="row4">
-                <td class="dots" id="1"></td>
-                <td class="dots" id="7"></td>
-                <td class="dots" id="13"></td>
-                <td class="dots" id="19"></td>
-                <td class="dots" id="25"></td>
-                <td class="dots" id="31"></td>
-                <td class="dots" id="37"></td>
-            </tr>
-            <tr class="row5">
-                <td class="dots" id="0"></td>
-                <td class="dots" id="6"></td>
-                <td class="dots" id="12"></td>
-                <td class="dots" id="18"></td>
-                <td class="dots" id="24"></td>
-                <td class="dots" id="30"></td>
-                <td class="dots" id="36"></td>
-            </tr>
+      <div>
+        <div class="dropButton">
+          <button class="drop" id="0-col">Drop 1</button>
+          <button class="drop" id="1-col">Drop 2</button>
+          <button class="drop" id="2-col">Drop 3</button>
+          <button class="drop" id="3-col">Drop 4</button>
+          <button class="drop" id="4-col">Drop 5</button>
+          <button class="drop" id="5-col">Drop 6</button>
+          <button class="drop" id="6-col">Drop 7</button>
+        </div>
+      </div>
+      <div class="boardOutline">
+        <table class="board">
+          <tr class="row0">
+
+            <td class="dots" id="5"></td>
+            <td class="dots" id="11"></td>
+            <td class="dots" id="17"></td>
+            <td class="dots" id="23"></td>
+            <td class="dots" id="29"></td>
+            <td class="dots" id="35"></td>
+            <td class="dots" id="41"></td>
+          </tr>
+          <tr class="row1">
+            <td class="dots" id="4"></td>
+            <td class="dots" id="10"></td>
+            <td class="dots" id="16"></td>
+            <td class="dots" id="22"></td>
+            <td class="dots" id="28"></td>
+            <td class="dots" id="34"></td>
+            <td class="dots" id="40"></td>
+          </tr>
+          <tr class="row2">
+            <td class="dots" id="3"></td>
+            <td class="dots" id="9"></td>
+            <td class="dots" id="15"></td>
+            <td class="dots" id="21"></td>
+            <td class="dots" id="27"></td>
+            <td class="dots" id="33"></td>
+            <td class="dots" id="39"></td>
+          </tr>
+          <tr class="row3">
+            <td class="dots" id="2"></td>
+            <td class="dots" id="8"></td>
+            <td class="dots" id="14"></td>
+            <td class="dots" id="20"></td>
+            <td class="dots" id="26"></td>
+            <td class="dots" id="32"></td>
+            <td class="dots" id="38"></td>
+          </tr>
+          <tr class="row4">
+            <td class="dots" id="1"></td>
+            <td class="dots" id="7"></td>
+            <td class="dots" id="13"></td>
+            <td class="dots" id="19"></td>
+            <td class="dots" id="25"></td>
+            <td class="dots" id="31"></td>
+            <td class="dots" id="37"></td>
+          </tr>
+          <tr class="row5">
+            <td class="dots" id="0"></td>
+            <td class="dots" id="6"></td>
+            <td class="dots" id="12"></td>
+            <td class="dots" id="18"></td>
+            <td class="dots" id="24"></td>
+            <td class="dots" id="30"></td>
+            <td class="dots" id="36"></td>
+          </tr>
         </table>
+      </div>
     </div>
-    <div>
+  </div>
+
+
+  <div>
     <button class="reset">Reset</button>
-    </div>
+  </div>
+  <!-- <audio src="In The Still Of The NIght Boys ll Men.mp3" loop=2 autoplay="true"></audio> -->
 
 
-  <script src="js/main.js"> </script>  
+  <script src="js/main.js">
+
+
+  </script>
 </body>
+
 </html>
