--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div>
     <button class="reset">Reset</button>
   </div>
-  <!-- <audio src="In The Still Of The NIght Boys ll Men.mp3" loop=2 autoplay="true"></audio> -->
+  <audio src="In The Still Of The NIght Boys ll Men.mp3" loop=2 autoplay="true"></audio>
 
 
   <script src="js/main.js">
